--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -2,6 +2,10 @@
   "name": "@genie/themes",
   "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild src/index.js --minify --format=cjs --bundle --outfile=dist/index.js"
+  },
+  "devDependencies": {
+    "esbuild": "^0.16.17"
   }
 }
